linked to samples

--- a/SmallWorld3D/index.html
+++ b/SmallWorld3D/index.html
@@ -55,9 +55,9 @@
 
 	<table class="demos">
 		<tr>
-			<td><a href=" "><img alt="Screenshot1" src="images/swdemo0.png"><br>Simple Polygon</a></td>
-			<td><a href=" "><img alt="Screenshot2" src="images/swdemo1.png"><br>Miku Model</a></td>
-			<td><a href=" "><img alt="Screenshot3" src="images/swdemo2.png"><br>SH PRT</a></td>
+			<td><a href="/sw3d/sample/simple-polygon.html"><img alt="Screenshot1" src="images/swdemo0.png"><br>Simple Polygon</a></td>
+			<td><a href="/sw3d/sample/miku.html"><img alt="Screenshot2" src="images/swdemo1.png"><br>Miku Model</a></td>
+			<td><a href="/sw3d/sample/miku-prt.html"><img alt="Screenshot3" src="images/swdemo2.png"><br>SH PRT</a></td>
 		</tr>
 	</table>
 
