added new sample

--- a/SmallWorld3D/index.html
+++ b/SmallWorld3D/index.html
@@ -7,6 +7,17 @@
 <body>
 	<h1><img src="images/sw3dlogo.png" alt="SmallWorld3D"></h1>
 	<p class="lead">The White Box of 3D Programming</p>
+
+	<div id="top-nav">
+		<ul class="page-nav">
+			<li class="here">
+			Top</li><li>
+			<a href="start.html">Getting Started</a></li><li>
+			<a href="demos.html">Demonstrations</a></li><li>
+			<a href="https://github.com/gyuque/sw3d">Download</a></li>
+		</ul>
+	</div>
+	
 	<h2>About</h2>
 	<p>SmallWorld3D is an educational realtime 3DCG library. Entire system including polygon rasterizer is written in short javascript.</p>
 	<table class="motto">
@@ -58,6 +69,8 @@
 			<td><a href="/sw3d/sample/simple-polygon.html"><img alt="Screenshot1" src="images/swdemo0.png"><br>Simple Polygon</a></td>
 			<td><a href="/sw3d/sample/miku.html"><img alt="Screenshot2" src="images/swdemo1.png"><br>Miku Model</a></td>
 			<td><a href="/sw3d/sample/miku-prt.html"><img alt="Screenshot3" src="images/swdemo2.png"><br>SH PRT</a></td>
+
+			<td><a href="/sw3d/sample/motion.html"><img alt="Screenshot3" src="images/motiondemo.png"><br>Motion</a></td>
 		</tr>
 	</table>
 
