--- a/SmallWorld3D/index.html
+++ b/SmallWorld3D/index.html
@@ -8,7 +8,7 @@
 	<h1><img src="images/sw3dlogo.png" alt="SmallWorld3D"></h1>
 	<p class="lead">The White Box of 3D Programming</p>
 
-	<div id="top-nav">
+	<!--div id="top-nav">
 		<ul class="page-nav">
 			<li class="here">
 			Top</li><li>
@@ -16,7 +16,7 @@
 			<a href="demos.html">Demonstrations</a></li><li>
 			<a href="https://github.com/gyuque/sw3d">Download</a></li>
 		</ul>
-	</div>
+	</div-->
 	
 	<h2>About</h2>
 	<p>SmallWorld3D is an educational realtime 3DCG library. Entire system including polygon rasterizer is written in short javascript.</p>
