--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<a href="./SmallWorld3D/">SmallWorld3D</a><br>
-<a href="./nnv/">Blobcat NN</a>
+<head>
+  <meta charset="UTF-8">
+</head> 
+<body>
+('-')<br>
+ﾉへへ<br>
+<br>
+2012 <a href="./SmallWorld3D/">SmallWorld3D</a><br>
+2020 <a href="http://pagam.es/">Nekotako<a><br>
+2024 <a href="./nnv/">Blobcat NN</a>
+</body>
