--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <meta charset="UTF-8">
 </head> 
 <body>
-('-')<br>
-ﾉへへ<br>
+( '-')<br>
+ﾉﾍへ<br>
 <br>
 2012 <a href="./SmallWorld3D/">SmallWorld3D</a><br>
 2020 <a href="http://pagam.es/">Nekotako<a><br>
